syntax = "proto3";

package project.planton.provider.digitalocean.digitaloceankubernetescluster.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/digitalocean/digitaloceankubernetescluster/v1/spec.proto";
import "project/planton/provider/digitalocean/digitaloceankubernetescluster/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

// digital-ocean-kubernetes-cluster
message DigitalOceanKubernetesCluster {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = "digital-ocean.project-planton.org/v1"];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = "DigitalOceanKubernetesCluster"];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  DigitalOceanKubernetesClusterSpec spec = 4 [(buf.validate.field).required = true];

  //status
  DigitalOceanKubernetesClusterStatus status = 5;
}

// digital-ocean-kubernetes-cluster status
message DigitalOceanKubernetesClusterStatus {
  //stack-outputs
  //  digital-ocean-kubernetes-cluster stack-outputs
  DigitalOceanKubernetesClusterStackOutputs outputs = 1;
}
